# C_Rogue

./: .gitignore  2d_map_view.cpp  Makefile  anatomy_components.cpp  anatomy_components.hpp  check.py  check_em.cpp  component.hpp  components.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  game_map.cpp  game_map.hpp  input_handler.cpp  input_handler.hpp  inventory_component.hpp  main  main.cpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  test_anatomy_flat  tile.cpp  tile.hpp
Entity/: CMakeLists.txt  anatomy_components.cpp  anatomy_components.hpp  anatomy_defs.hpp  anatomy_system.cpp  anatomy_system.hpp  biological_tags.hpp  body_template.hpp  combat_types.hpp  component.hpp  components.hpp  damage_resolution_system.cpp  damage_resolution_system.hpp  entity.cpp  entity.hpp  entity_factory.cpp  entity_factory.hpp  entity_manager.cpp  entity_manager.hpp  event.hpp  event_bus.hpp  inventory_component.hpp  item.hpp  physiology_system.cpp  physiology_system.hpp  player.cpp  spatial_system.cpp  spatial_system.hpp  system_manager.cpp  system_manager.hpp
Entity/components/: anatomy_part_def.hpp  brain.hpp  eye.hpp  heart.hpp  limb.hpp  lung.hpp
